--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
                 <li class="active"><a href="index.php">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="pesquisa.phtml">Pesquisar</a></li>
                 <li><a href="porPopularidade.php">Popularidade</a></li>
               </ul>
             </div><!--/.nav-collapse -->
